--- a/hadoop-hdfs-project/hadoop-hdfs/src/test/resources/log4j.properties
+++ b/hadoop-hdfs-project/hadoop-hdfs/src/test/resources/log4j.properties
@@ -16,7 +16,7 @@
 #
 # log4j configuration used during build and unit tests
 
-log4j.rootLogger=info,stdout
+log4j.rootLogger=debug,stdout
 log4j.threshold=ALL
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -39,7 +39,7 @@ log4j.appender.NNMETRICSRFA.MaxFileSize=64MB
 # DataNode metrics logging.
 # The default is to retain two datanode-metrics.log files up to 64MB each.
 #
-log4j.logger.DataNodeMetricsLog=INFO,DNMETRICSRFA
+log4j.logger.DataNodeMetricsLog=debug,DNMETRICSRFA
 log4j.additivity.DataNodeMetricsLog=false
 log4j.appender.DNMETRICSRFA=org.apache.log4j.RollingFileAppender
 log4j.appender.DNMETRICSRFA.File=${hadoop.log.dir}/datanode-metrics.log
